--- a/package.json
+++ b/package.json
@@ -6,75 +6,81 @@
   "engines": {
     "vscode": "^1.101.0"
   },
-  "configuration": {
-  "title": "Navify",
-  "properties": {
-    "navify.excludeGlobs": {
-      "type": "array",
-      "default": [
-        "**/.git/**",
-        "**/.hg/**",
-        "**/.svn/**",
-        "**/node_modules/**",
-        "**/bower_components/**",
-        "**/.vscode/**",
-        "**/.idea/**",
-        "**/.vs/**",
-        "**/.DS_Store",
-        "**/*.log",
-        "**/*.tmp",
-        "**/*.bak",
-        "**/*.map",
-        "**/dist/**",
-        "**/build/**",
-        "**/out/**",
-        "**/coverage/**",
-        "**/.cache/**",
-        "**/.turbo/**",
-        "**/.next/**",
-        "**/.parcel-cache/**",
-        "**/.rollup.cache/**",
-        "**/target/**",
-        "**/bin/**",
-        "**/obj/**",
-        "**/.terraform/**",
-        "**/.venv/**",
-        "**/venv/**",
-        "**/__pycache__/**",
-        "**/*.pyc",
-        "**/.mypy_cache/**",
-        "**/.pytest_cache/**"
-      ],
-      "description": "Extra glob patterns Navify should exclude when indexing files.",
-      "items": { "type": "string" }
-    },
-    "navify.respectWorkspaceExcludes": {
-      "type": "boolean",
-      "default": true,
-      "description": "Also use workspace 'files.exclude' and 'search.exclude' when building the index."
-    },
-    "navify.maxResults": {
-      "type": "number",
-      "default": 100000,
-      "minimum": 1000,
-      "description": "Maximum number of files to scan when building the index."
-    },
-    "navify.hideHiddenFiles": {
-      "type": "boolean",
-      "default": true,
-      "description": "Hide dotfiles and dot-directories from results unless directly matched."
-    }
-  }
-},
   "categories": [
     "Other"
   ],
+  "main": "./out/extension.js",
+
   "activationEvents": [
     "onView:navify.searchView",
     "onCommand:navify.focus",
     "onCommand:navify.searchFiles"
   ],
+
   "contributes": {
+    "configuration": {
+      "title": "Navify",
+      "properties": {
+        "navify.excludeGlobs": {
+          "type": "array",
+          "default": [
+            "**/.git/**",
+            "**/.hg/**",
+            "**/.svn/**",
+            "**/node_modules/**",
+            "**/bower_components/**",
+            "**/.vscode/**",
+            "**/.idea/**",
+            "**/.vs/**",
+            "**/.DS_Store",
+            "**/*.log",
+            "**/*.tmp",
+            "**/*.bak",
+            "**/*.map",
+            "**/dist/**",
+            "**/build/**",
+            "**/out/**",
+            "**/coverage/**",
+            "**/.cache/**",
+            "**/.turbo/**",
+            "**/.next/**",
+            "**/.parcel-cache/**",
+            "**/.rollup.cache/**",
+            "**/target/**",
+            "**/bin/**",
+            "**/obj/**",
+            "**/.terraform/**",
+            "**/.venv/**",
+            "**/venv/**",
+            "**/__pycache__/**",
+            "**/*.pyc",
+            "**/.mypy_cache/**",
+            "**/.pytest_cache/**"
+          ],
+          "description": "Extra glob patterns Navify should exclude when indexing files.",
+          "items": {
+            "type": "string"
+          }
+        },
+        "navify.respectWorkspaceExcludes": {
+          "type": "boolean",
+          "default": true,
+          "description": "Also use workspace 'files.exclude' and 'search.exclude' when building the index."
+        },
+        "navify.maxResults": {
+          "type": "number",
+          "default": 100000,
+          "minimum": 1000,
+          "description": "Maximum number of files to scan when building the index."
+        },
+        "navify.hideHiddenFiles": {
+          "type": "boolean",
+          "default": true,
+          "description": "Hide dotfiles and dot-directories from results unless directly matched."
+        }
+      }
+    },
+
     "viewsContainers": {
       "activitybar": [
         {
@@ -84,6 +90,7 @@
         }
       ]
     },
+
     "views": {
       "navify-container": [
         {
@@ -94,31 +101,57 @@
         }
       ]
     },
+
     "viewsWelcome": [
       {
         "view": "navify.searchView",
         "contents": "Start typing to search your workspace.\n[Open Navify](command:navify.focus)"
       }
     ],
+
     "commands": [
-      { "command": "navify.searchFiles", "title": "Navify: Fuzzy File Search" },
-      { "command": "navify.focus", "title": "Navify: Focus File Search" }
+      {
+        "command": "navify.searchFiles",
+        "title": "Navify: Fuzzy File Search"
+      },
+      {
+        "command": "navify.focus",
+        "title": "Navify: Focus File Search"
+      }
     ],
+
     "menus": {
       "commandPalette": [
-        { "command": "navify.focus" }
+        {
+          "command": "navify.focus"
+        }
       ]
     }
   },
-  "main": "./out/extension.js",
+
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "vscode:prepublish": "npm run build:webview && npm run compile",
+
+    "compile": "tsc -p .",
+    "watch": "tsc -watch -p .",
+
+    "build:webview": "node webview/esbuild.mjs",
+    "watch:webview": "node webview/esbuild.mjs --watch",
+    "check:webview": "tsc -p webview/tsconfig.json",
+
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
     "test": "vscode-test"
   },
+
+  "files": [
+    "out/**",
+    "media/**",
+    "package.json",
+    "README.md",
+    "CHANGELOG.md"
+  ],
+
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
@@ -127,7 +160,12 @@
     "@typescript-eslint/parser": "^8.42.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
+    "esbuild": "^0.27.3",
     "eslint": "^9.34.0",
     "typescript": "^5.9.2"
+  },
+
+  "dependencies": {
+    "preact": "^10.28.3"
   }
 }
