--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "Other"
   ],
   "main": "./out/extension.js",
-
   "activationEvents": [
     "onView:navify.searchView",
     "onCommand:navify.focus",
     "onCommand:navify.searchFiles"
   ],
-
   "contributes": {
     "configuration": {
       "title": "Navify",
@@ -80,7 +78,6 @@
         }
       }
     },
-
     "viewsContainers": {
       "activitybar": [
         {
@@ -90,7 +87,6 @@
         }
       ]
     },
-
     "views": {
       "navify-container": [
         {
@@ -101,14 +97,12 @@
         }
       ]
     },
-
     "viewsWelcome": [
       {
         "view": "navify.searchView",
         "contents": "Start typing to search your workspace.\n[Open Navify](command:navify.focus)"
       }
     ],
-
     "commands": [
       {
         "command": "navify.searchFiles",
@@ -119,7 +113,6 @@
         "title": "Navify: Focus File Search"
       }
     ],
-
     "menus": {
       "commandPalette": [
         {
@@ -128,22 +121,17 @@
       ]
     }
   },
-
   "scripts": {
     "vscode:prepublish": "npm run build:webview && npm run compile",
-
     "compile": "tsc -p .",
     "watch": "tsc -watch -p .",
-
     "build:webview": "node webview/esbuild.mjs",
     "watch:webview": "node webview/esbuild.mjs --watch",
     "check:webview": "tsc -p webview/tsconfig.json",
-
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
     "test": "vscode-test"
   },
-
   "files": [
     "out/**",
     "media/**",
@@ -151,20 +139,18 @@
     "README.md",
     "CHANGELOG.md"
   ],
-
   "devDependencies": {
     "@types/mocha": "^10.0.10",
-    "@types/node": "22.x",
+    "@types/node": "^25.2.3",
     "@types/vscode": "^1.101.0",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
     "@typescript-eslint/parser": "^8.42.0",
-    "@vscode/test-cli": "^0.0.11",
+    "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2",
     "esbuild": "^0.27.3",
     "eslint": "^9.34.0",
     "typescript": "^5.9.2"
   },
-
   "dependencies": {
     "preact": "^10.28.3"
   }
